# llama-r

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AI_SKILLS.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  build.rs  error.json
proto/: llamar.proto
src/: config.rs  error.rs  lib.rs  main.rs  runtime.rs
src/api/: agent_api.rs  chat_core.rs  context_api.rs  grpc.rs  handlers.rs  health.rs  mcp_api.rs  mod.rs  observability.rs  sse.rs
src/cli/: commands.rs  interactive.rs
src/context/: analyzer.rs  enricher.rs  mod.rs  store.rs
src/core/: hot_reload.rs  mod.rs  paths.rs
src/domain/: agent.rs  models.rs
src/mcp/: mod.rs
src/optimizer/: ast.rs  metrics.rs  mod.rs  rules.rs
src/providers/: mod.rs  ollama.rs
src/services/: agent_manager.rs  agent_skill_sync.rs  mod.rs  skill_manager.rs  validation.rs
src/tui/: app.rs
src/tui/views/: dashboard.rs  mod.rs  projects.rs
tests/: api_integration.rs
