[package]
name = "llama-r"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
toml = "1.0.4"
bytes = "1.11.1"
notify = "8.2.0"
tokio-stream = "0.1.18"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures = "0.3.32"
tonic = "0.11.0"
prost = "0.12.6"
async-stream = "0.3.5"
ratatui = "0.30.0"
crossterm = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.15.0"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.11.0"
